adding shared preferences and added a toggle button. I haven't wired in the toggle button yet

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -44,6 +44,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
+        android:id="@+id/toggleMapType"
+        android:text="@string/toggle_map_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Button
         android:id="@+id/goToSeattle"
         android:text="@string/seattle"
         android:layout_width="match_parent"
