--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -9,7 +9,7 @@
     You can also add your credentials to an existing key, using these values:
 
     Package name:
-    25:5E:02:E5:29:81:B0:FE:41:DD:95:1F:39:07:4A:E3:7A:D7:81:8E
+    droid.yutani.com.persistantmapapp
 
     SHA-1 certificate fingerprint:
     25:5E:02:E5:29:81:B0:FE:41:DD:95:1F:39:07:4A:E3:7A:D7:81:8E
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBKNB7Zyi7eQIl1sbvhDkJFcc0OKjTqmts</string>
 </resources>
