--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -40,6 +40,12 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
+        
+        <Button
+            android:id="@+id/toggle_sat_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/toggle_satellite_view" />
 
     </LinearLayout>
 
