--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -47,6 +47,12 @@
             android:layout_height="wrap_content"
             android:text="@string/toggle_satellite_view" />
 
+        <Button
+            android:id="@+id/go_to_k2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/go_to_k2" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
