--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,6 +1,7 @@
 <resources>
     <!--
     TODO: Before you run your application, you need a Google Maps API key.
+    /Users/macbookpro-2/Desktop/401/36-persistant-map-app/app/src/debug/res/values/google_maps_api.xml
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
