Last location persists, added multiple map type views.

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -37,18 +37,13 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <Button
-            android:id="@+id/search"
-            android:text="Search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Button
             android:id="@+id/toggleView"
             android:text="@string/toggle_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <Button
             android:id="@+id/goToSeattle"
-            android:text="@string/seattle"
+            android:text="@string/cleveland"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
