Updated button id/method to be goToCleveland (from goToToSeattle).

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <Button
-            android:id="@+id/goToSeattle"
+            android:id="@+id/goToCleveland"
             android:text="@string/cleveland"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
